--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <div  class="bg">
 <header>
         <!-- <button class="burger_menu">&#9776;</button> -->
-        <nav class="mobile-nav-wrap" role="navigation">
+        <nav class="mobile-nav-wrap">
             <ul class="mobile-header-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">People</a></li>
